Improving swagger
